--- a/css/master.css
+++ b/css/master.css
@@ -18,12 +18,7 @@
   padding-top: var(--section-padding);
   padding-bottom: var(--section-padding);
 }
-
-  .services .srv-box i {
-    margin: 0 0 30px;
-  }
-}
-.services .srv-box h3 {
+ .srv-box h3 {
   margin-bottom: 30px;
   color: var(--main-color);
 }
